fix: make it look better on mobile

--- a/src/pages/bonds/styles.module.scss
+++ b/src/pages/bonds/styles.module.scss
@@ -1,7 +1,6 @@
 .button {
     background: linear-gradient(318.43deg, #002EFF -7.57%, #22E1FF 100%);
     border-radius: 5px;
-    width: 70%;
     color: white;
     padding-right: 15px;
     padding-left: 15px;
